# tTools

./: CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: main.cc.136A988791897EA9.idx  main.cc.E9257A3ACFB1271C.idx  my_lib.cc.DB99FA3CD84E0DA6.idx  my_lib.h.590CB86833CEA089.idx  result.h.BC77F0975C0EDAAA.idx  todo.cc.547FBC221590944B.idx  todo.h.391549CB28FF8FF6.idx
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  ConfigSafeGuards.cmake  Docs.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
docs/: Doxyfile
docs/latex/: refman.tex
passManager/prototype/: main.py  passManager.py
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h  result.h  todo.cc  todo.h
tests/: CMakeLists.txt  main.cc
todo/prototype/: main.py  todo.db  todo.py
